1999-12-01  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/bits/utsname.h: Test for _SYS_UTSNAME_H, not
	_UTSNAME_H.

	* malloc/set-freeres.c: Really use already_called variable.

	* libio/iosetbuffer.c: Use _IO_WSETBUF instead of constructing
	function call directly.
	* libio/iosetvbuf.c: Likewise.

1999-11-29  Ulrich Drepper  <drepper@cygnus.com>

	* configure.in: Add AIX 4.3 support.

	* iconvdata/gconv-modules: Correct alias for ISO-8859-10.  This
	standard was issued in 1992.
	Reported by Bruno Haible <haible@ilog.fr>.

1999-11-29  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/unix/sysv/linux/sparc/bits/signum.h: Add define for
	SIGCLD als SIGCHLD.

1999-11-29  Andreas Jaeger  <aj@suse.de>

	* manual/time.texi (Basic CPU Time): Better describe wrap around.
	Patch by Andries Brouwer <Andries.Brouwer@cwi.nl>.

1999-11-29  Ulrich Drepper  <drepper@cygnus.com>

	* iconvdata/gconv-modules: Fix typos in LATIN8/L8 aliases.
	Patch by Bruno Haible <haible@ilog.fr>.

1999-11-29  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/unix/sysv/linux/sparc/sys/ptrace.h: Remove K&R compatibility.

1999-11-29  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/bits/byteswap.h (__bswap_32): Rename local variable
	__v to __bswap_32_v.
	(__bswap_64): Rename local variables __v and __r to __bswap_64_v
	and __bswap_64_r to avoid clash with __bswap_32 macro.

1999-11-28  Ulrich Drepper  <drepper@cygnus.com>

	* iconvdata/t.61.c (CHARSET_NAME): Correct name to what is used in
	gconv-modules.

1999-11-26  Ulrich Drepper  <drepper@cygnus.com>

	* locale/programs/ld-ctype.c (allocate_arrays): Complete last
	patch.  Use wch instead of idx to compute index.
	Patch by Shinya Hanataka <hanataka@abyss.rim.or.jp>.

	* inet/rcmd.c (ruserok): Use iruserok2 not iruserok.

	* locale/iso-3166.def: Update from latest official list.

1999-11-26  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/unix/sysv/linux/sparc/sparc32/register-dump.h: Include